# RdRand

./: .directory  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen-clean.sh  autoreconf.sh  config.h  config.h.in  config.status  configure  configure.ac  librdrand-aes.h  librdrand.h  librdrand.pc  librdrand.pc.in  libtool  rdrand-gen.man  rdrand-lib.man  rdrand.h  rdrand.pc.in  rdrandconfig.h  stamp-h2
SPEC/: RdRand.spec
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
check_tests/: .Makefile.swp  .gitignore  Makefile  check_aes  check_aes.c  check_rdrand  check_rdrand-gen  check_rdrand-gen.c  check_rdrand.c  keys.txt  tools.c  tools.h
check_tests/openssl-demo/: Makefile  aesctr  aesctr.c  openssl-aesctr  test-with-ones.sh
man/: aes-notes.txt  librdrand-aes.3  librdrand.3  rdrand-gen.7
src/: librdrand-aes.c  librdrand-aes.h  librdrand-aes.private.h  librdrand.c  librdrand.h  main.c  rdrand-gen.c  rdrand-gen.h  rdrand.c  rdrand.h
tests/: .gitignore  Makefile  RdRand  TestU01_raw_stdin_input_with_log.c  _parse-throughput.py  _test-threads.sh  devel_tests.c  jh.c  jh_standalone  main.c  rdrand-gen  run-test.sh  test-threads.sh  test_throughput.c
